[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/DiscoverButton.gd" type="Script" id=1]
[ext_resource path="res://ui/UI.gd" type="Script" id=2]
[ext_resource path="res://ui/SpellBindings.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/crafting/IngredientItemList.gd" type="Script" id=4]
[ext_resource path="res://ui/Inventory.gd" type="Script" id=5]
[ext_resource path="res://ui/crafting/Craft.gd" type="Script" id=6]

[node name="UI" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Inventory" type="WindowDialog" parent="."]
margin_left = 421.0
margin_top = 192.0
margin_right = 666.0
margin_bottom = 416.0
script = ExtResource( 5 )

[node name="TabContainer" type="TabContainer" parent="Inventory"]
margin_left = -0.136322
margin_top = 4.59103
margin_right = 245.864
margin_bottom = 225.591

[node name="Discover" type="Control" parent="Inventory/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 1 )

[node name="IngredientItemList" type="ItemList" parent="Inventory/TabContainer/Discover"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -35.0
select_mode = 1
allow_reselect = true
allow_rmb_select = true
max_columns = 2
script = ExtResource( 4 )

[node name="Button" type="Button" parent="Inventory/TabContainer/Discover"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 73.0
margin_top = 165.0
margin_right = -66.0
margin_bottom = -5.0
disabled = true
text = "Craft"

[node name="Craft" type="Control" parent="Inventory/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 6 )

[node name="ScrollContainer" type="ScrollContainer" parent="Inventory/TabContainer/Craft"]
margin_right = 238.0
margin_bottom = 190.0

[node name="VBoxContainer" type="VBoxContainer" parent="Inventory/TabContainer/Craft/ScrollContainer"]

[node name="SpellBindings" parent="." instance=ExtResource( 3 )]
position = Vector2( 16, 520 )
[connection signal="popup_hide" from="Inventory" to="Inventory" method="_on_Inventory_popup_hide"]
[connection signal="item_selected" from="Inventory/TabContainer/Discover/IngredientItemList" to="Inventory/TabContainer/Discover" method="_on_ItemList_item_selected"]
[connection signal="multi_selected" from="Inventory/TabContainer/Discover/IngredientItemList" to="Inventory/TabContainer/Discover" method="_on_ItemList_multi_selected"]
[connection signal="pressed" from="Inventory/TabContainer/Discover/Button" to="Inventory/TabContainer/Discover" method="_on_Button_pressed"]
